# 2048-tile-twister

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  docker-compose.yml
SDL3/: README.md
SDL3/cmake/: SDL3Config.cmake  SDL3ConfigVersion.cmake
build-vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  HelloWorld.sln  HelloWorld.vcxproj  HelloWorld.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build-vs/HelloWorld.dir/Release/: HelloWorld.exe.recipe
build-vs/HelloWorld.dir/Release/HelloWorld.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  HelloWorld.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build-vs/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build-vs/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.write.1.tlog
build-vs/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build-vs/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
src/: main.cpp
src/core/: Game.cpp  Game.hpp  Grid.cpp  Grid.hpp  Tile.cpp  Tile.hpp
src/sdl/: Window.cpp  Window.hpp
src/views/: gameObject.cpp  gameObject.hpp  gridView.cpp  gridView.hpp  tileView.cpp  tileView.hpp  window.cpp  window.hpp
tests/: gameTest.cpp  gridTest.cpp  testMain.cpp
